content.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content
  namespace: sv-neft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content
  template:
    metadata:
      labels:
        app: content
    spec:
      containers:
        - name: content
          image: svneft/content:2
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: sv-neft
  name: content
spec:
  selector:
    app: content
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
