core.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core
  namespace: sv-neft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core
  template:
    metadata:
      labels:
        app: core
    spec:
      containers:
        - name: core
          image: svneft/core:597
          # ports:
          #   - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: sv-neft
  name: core
spec:
  selector:
    app: core
  # ports:
  #   - protocol: TCP
  #     port: 80
  #     targetPort: 3000
