goods.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goods
  namespace: sv-neft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goods
  template:
    metadata:
      labels:
        app: goods
    spec:
      containers:
        - name: goods
          image: svneft/dozasync:8
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: sv-neft
  name: goods
spec:
  selector:
    app: goods
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
