logger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger
  namespace: sv-neft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logger
  template:
    metadata:
      labels:
        app: logger
    spec:
      containers:
        - name: logger
          image: svneft/logger:3
          # ports:
          #   - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: sv-neft
  name: logger
spec:
  selector:
    app: logger
  # ports:
  #   - protocol: TCP
  #     port: 80
  #     targetPort: 3000
