user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: sv-neft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: svneft/user:5
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: sv-neft
  name: user
spec:
  selector:
    app: user
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
