admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-panel
  namespace: sv-neft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-panel
  template:
    metadata:
      labels:
        app: admin-panel
    spec:
      containers:
        - name: admin-panel
          image: svneft/gateway-admin:132
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  namespace: sv-neft
  name: admin-panel
spec:
  selector:
    app: admin-panel
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-panel
  namespace: sv-neft
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/issuer: "letsencrypt-global-war"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.sv-neft.ru
      secretName: sv-neft-vs
  rules:
    - host: app.sv-neft.ru
      http:
        paths:
          - backend:
              service:
                name: admin-panel
                port:
                  number: 8001
            path: /admin-panel(/|$)(.*)
            pathType: Prefix
