adminfront.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-front
  namespace: sv-neft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-front
  template:
    metadata:
      labels:
        app: admin-front
    spec:
      containers:
        - name: admin-front
          image: svneft/adminka:134
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  namespace: sv-neft
  name: admin-front
spec:
  selector:
    app: admin-front
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-front
  namespace: sv-neft
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/issuer: "letsencrypt-sv-neft"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.sv-neft.ru
      secretName: sv-neft-vs
  rules:
    - host: app.sv-neft.ru
      http:
        paths:
          - backend:
              service:
                name: admin-front
                port:
                  number: 8888
            path: /admin-front(/|$)(.*)
            pathType: Prefix
