doza.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doza-api
  namespace: sv-neft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doza-api
  template:
    metadata:
      labels:
        app: doza-api
    spec:
      containers:
        - name: doza-api
          image: 85456789/doza:2.0.2
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  namespace: sv-neft
  name: doza-api
spec:
  selector:
    app: doza-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doza
  namespace: sv-neft
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: codovstvo-test.ru
      http:
        paths:
          - backend:
              service:
                name: doza-api
                port:
                  number: 80
            path: /doza(/|$)(.*)
            pathType: Prefix
