gateway_for_doza_test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doza-test-order
  namespace: sv-neft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doza-test-order
  template:
    metadata:
      labels:
        app: doza-test-order
    spec:
      containers:
        - name: doza-test-order
          image: svneft/gateway-app:43
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: sv-neft
  name: doza-test-order
spec:
  selector:
    app: doza-test-order
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doza-test-order
  namespace: sv-neft
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/issuer: "letsencrypt-global-war"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - codovstvo-test.ru
      secretName: sv-neft
  rules:
    - host: codovstvo-test.ru
      http:
        paths:
          - backend:
              service:
                name: doza-test-order
                port:
                  number: 80
            path: /doza-test-order(/|$)(.*)
            pathType: Prefix
