order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: sv-neft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: svneft/order:2
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: sv-neft
  name: order
spec:
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  namespace: sv-neft
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: codovstvo-test.ru
      http:
        paths:
          - backend:
              service:
                name: order
                port:
                  number: 80
            path: /order(/|$)(.*)
            pathType: Prefix
